SET TIME ZONE 'Asia/Bangkok';

CREATE OR REPLACE FUNCTION set_updated_at_column()
RETURNS TRIGGER AS $$
BEGIN
    NEW.updated_at = CURRENT_TIMESTAMP;
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

CREATE TABLE IF NOT EXISTS users (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(255) NOT NULL UNIQUE,
    password VARCHAR(255) NOT NULL,
    customer_id VARCHAR(255),
    payment_method_id VARCHAR(255),
    device_token VARCHAR(512) NOT NULL,
    first_name VARCHAR(255) NOT NULL,
    last_name VARCHAR(255) NOT NULL,
    noti_food BOOLEAN NOT NULL DEFAULT TRUE,
    noti_calendars BOOLEAN NOT NULL DEFAULT TRUE,
    noti_update_pet BOOLEAN NOT NULL DEFAULT TRUE,
    profile_free INTEGER NOT NULL DEFAULT 0,
    food_free INTEGER NOT NULL DEFAULT 0,
    food_plan_free INTEGER NOT NULL DEFAULT 0,
    disease_free INTEGER NOT NULL DEFAULT 0,
    subscription_status INTEGER NOT NULL DEFAULT 2 CHECK (subscription_status BETWEEN 0 AND 4),
    tier INTEGER NOT NULL DEFAULT 0 CHECK (tier BETWEEN 0 AND 3),
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMPTZ
);

CREATE TABLE IF NOT EXISTS pets (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INT NOT NULL,
    image_path VARCHAR(512),
    name VARCHAR(255) NOT NULL,
    type INTEGER NOT NULL CHECK (type IN (0, 1)),
    breed VARCHAR(255) NOT NULL,
    sex_type INTEGER NOT NULL CHECK (sex_type IN (0, 1)),
    birth_date DATE NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMPTZ,
    CONSTRAINT fk_users_pets FOREIGN KEY (user_id) REFERENCES users (id)
);

CREATE TABLE IF NOT EXISTS pet_details (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id INT NOT NULL,
    weight DECIMAL(12,4) NOT NULL CHECK (weight > 0),
    activity_level INTEGER NOT NULL CHECK (activity_level BETWEEN 0 AND 3),
    age_range INTEGER NOT NULL CHECK (age_range BETWEEN 0 AND 2),
    bcs INTEGER NOT NULL CHECK (bcs > 0),
    lactation BOOLEAN NOT NULL DEFAULT FALSE,
    gestation BOOLEAN NOT NULL DEFAULT FALSE,
    gestation_start_date DATE,
    neutered BOOLEAN NOT NULL DEFAULT FALSE,
    energy DECIMAL(12,4) NOT NULL,
    protein DECIMAL(12,4) NOT NULL,
    fat DECIMAL(12,4) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_pets_pet_details FOREIGN KEY (pet_id) REFERENCES pets (id)
);

CREATE TABLE IF NOT EXISTS foods (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INT NOT NULL,
    image_path VARCHAR(512),
    name VARCHAR(255) NOT NULL,
    brand VARCHAR(255) NOT NULL,
    type INTEGER NOT NULL CHECK (type BETWEEN 0 AND 3),
    energy DECIMAL(12,4) NOT NULL CHECK (energy >= 0),
    protein DECIMAL(12,4) NOT NULL CHECK (protein >= 0),
    fat DECIMAL(12,4) NOT NULL CHECK (fat >= 0),
    moist DECIMAL(12,4) NOT NULL CHECK (moist >= 0),
    grams_per_cup DECIMAL(12,4) NOT NULL DEFAULT 120.0000,
    deleted_at TIMESTAMPTZ,
    CONSTRAINT fk_users_foods FOREIGN KEY (user_id) REFERENCES users (id)
);

CREATE TABLE IF NOT EXISTS food_quantities (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    food_id INT NOT NULL,
    quantity INTEGER NOT NULL CHECK (quantity > 0),
    weight DECIMAL(12,4) NOT NULL CHECK (weight > 0),
    amount DECIMAL(12,4) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_foods_food_quantities FOREIGN KEY (food_id) REFERENCES foods (id)
);

CREATE TABLE IF NOT EXISTS pet_food_plans (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id INT NOT NULL,
    name VARCHAR(255) NOT NULL,
    active BOOLEAN NOT NULL,
    unit INTEGER NOT NULL DEFAULT 0 CHECK (unit IN (0, 1)),
    self_define BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMPTZ,
    CONSTRAINT fk_pets_pet_food_plans FOREIGN KEY (pet_id) REFERENCES pets (id)
);

CREATE TABLE IF NOT EXISTS food_pet_food_plans (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_food_plan_id INT NOT NULL,
    food_id INT NOT NULL,
    CONSTRAINT fk_pet_food_plans_food_pet_food_plans FOREIGN KEY (pet_food_plan_id) REFERENCES pet_food_plans (id),
    CONSTRAINT fk_foods_food_pet_food_plans FOREIGN KEY (food_id) REFERENCES foods (id)
);

CREATE TABLE IF NOT EXISTS pet_food_plan_totals (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_food_plan_id INT NOT NULL,
    pet_detail_id INT NOT NULL,
    total_energy_intake DECIMAL(12,4) NOT NULL,
    total_protein_intake DECIMAL(12,4) NOT NULL,
    total_fat_intake DECIMAL(12,4) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_pet_food_plans_pet_food_plan_totals FOREIGN KEY (pet_food_plan_id) REFERENCES pet_food_plans (id),
    CONSTRAINT fk_pet_details_pet_food_plan_totals FOREIGN KEY (pet_detail_id) REFERENCES pet_details (id)
);

CREATE TABLE IF NOT EXISTS pet_food_plan_details (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    food_pet_food_plan_id INT NOT NULL,
    pet_food_plan_totals_id INT NOT NULL,
    amount DECIMAL(12,4) NOT NULL,
    energy_intake DECIMAL(12,4) NOT NULL,
    protein_intake DECIMAL(12,4) NOT NULL,
    fat_intake DECIMAL(12,4) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_food_pet_food_plans_pet_food_plan_details FOREIGN KEY (food_pet_food_plan_id) REFERENCES food_pet_food_plans (id),
    CONSTRAINT fk_pet_food_plan_totals_pet_food_plan_details FOREIGN KEY (pet_food_plan_totals_id) REFERENCES pet_food_plan_totals (id)
);

CREATE TABLE IF NOT EXISTS pet_food_plan_histories (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id INT NOT NULL,
    pet_food_plan_total_id INT NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_pets_pet_food_plan_histories FOREIGN KEY (pet_id) REFERENCES pets (id),
    CONSTRAINT fk_pet_food_plan_totals_pet_food_plan_histories FOREIGN KEY (pet_food_plan_total_id) REFERENCES pet_food_plan_totals (id)
);

CREATE TABLE IF NOT EXISTS pet_calendars (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(255) NOT NULL,
    type INTEGER NOT NULL CHECK (type BETWEEN 0 AND 2),
    start_datetime TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    end_date DATE,
    frequently INTEGER NOT NULL CHECK (frequently BETWEEN 0 AND 4),
    notation VARCHAR(512),
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMPTZ
);

CREATE TABLE IF NOT EXISTS pet_activity_calendars (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id INT NOT NULL,
    pet_calendar_id INT NOT NULL,
    CONSTRAINT fk_pets_pet_activity_calendars FOREIGN KEY (pet_id) REFERENCES pets (id),
    CONSTRAINT fk_pet_calendars_pet_activity_calendars FOREIGN KEY (pet_calendar_id) REFERENCES pet_calendars (id)
);

CREATE TABLE IF NOT EXISTS pet_skin_images (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id INT NOT NULL,
    image_path VARCHAR(255) NOT NULL,
    predicted INTEGER NOT NULL CHECK (predicted BETWEEN 0 AND 6),
    confident INTEGER NOT NULL,
    labeled INTEGER CHECK (labeled BETWEEN -1 AND 6),
    image_evidence VARCHAR(512),
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at TIMESTAMPTZ,
    CONSTRAINT fk_pets_pet_skin_images FOREIGN KEY (pet_id) REFERENCES pets (id)
);

-- CREATE INDEX IF NOT EXISTS idx_users_deleted_at ON users (deleted_at);
-- CREATE INDEX IF NOT EXISTS idx_pets_user_id ON pets (user_id);
-- CREATE INDEX IF NOT EXISTS idx_pets_deleted_at ON pets (deleted_at);
-- CREATE INDEX IF NOT EXISTS idx_pet_details_pet_id ON pet_details (pet_id);
-- CREATE INDEX IF NOT EXISTS idx_foods_user_id ON foods (user_id);
-- CREATE INDEX IF NOT EXISTS idx_foods_deleted_at ON foods (deleted_at);
-- CREATE INDEX IF NOT EXISTS idx_food_quantities_food_id ON food_quantities (food_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_food_plans_pet_id ON pet_food_plans (pet_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_food_plans_deleted_at ON pet_food_plans (deleted_at);
-- CREATE INDEX IF NOT EXISTS idx_food_pet_food_plans_pet_food_plan_id ON food_pet_food_plans (pet_food_plan_id);
-- CREATE INDEX IF NOT EXISTS idx_food_pet_food_plans_food_id ON food_pet_food_plans (food_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_food_plan_totals_pet_food_plan_id ON pet_food_plan_totals (pet_food_plan_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_food_plan_totals_pet_detail_id ON pet_food_plan_totals (pet_detail_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_food_plan_details_food_pet_food_plan_id ON pet_food_plan_details (food_pet_food_plan_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_food_plan_details_pet_food_plan_totals_id ON pet_food_plan_details (pet_food_plan_totals_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_food_plan_histories_pet_id ON pet_food_plan_histories (pet_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_food_plan_histories_pet_food_plan_total_id ON pet_food_plan_histories (pet_food_plan_total_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_calendars_deleted_at ON pet_calendars (deleted_at);
-- CREATE INDEX IF NOT EXISTS idx_pet_activity_calendars_pet_id ON pet_activity_calendars (pet_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_activity_calendars_pet_calendar_id ON pet_activity_calendars (pet_calendar_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_skin_images_pet_id ON pet_skin_images (pet_id);
-- CREATE INDEX IF NOT EXISTS idx_pet_skin_images_deleted_at ON pet_skin_images (deleted_at);

-- DROP TRIGGER IF EXISTS trg_users_set_updated_at ON users;
-- CREATE TRIGGER trg_users_set_updated_at
-- BEFORE UPDATE ON users
-- FOR EACH ROW
-- EXECUTE FUNCTION set_updated_at_column();

-- DROP TRIGGER IF EXISTS trg_pets_set_updated_at ON pets;
-- CREATE TRIGGER trg_pets_set_updated_at
-- BEFORE UPDATE ON pets
-- FOR EACH ROW
-- EXECUTE FUNCTION set_updated_at_column();

-- DROP TRIGGER IF EXISTS trg_food_quantities_set_updated_at ON food_quantities;
-- CREATE TRIGGER trg_food_quantities_set_updated_at
-- BEFORE UPDATE ON food_quantities
-- FOR EACH ROW
-- EXECUTE FUNCTION set_updated_at_column();

-- DROP TRIGGER IF EXISTS trg_pet_skin_images_set_updated_at ON pet_skin_images;
-- CREATE TRIGGER trg_pet_skin_images_set_updated_at
-- BEFORE UPDATE ON pet_skin_images
-- FOR EACH ROW
-- EXECUTE FUNCTION set_updated_at_column();
