Project wellpaw_backend {
  database_type: "PostgreSQL"
  Note: '''
  Generated from persisted structs in internal/model.
  Rules applied:
  - float64 -> decimal(12,4)
  - time.Time datetime fields -> timestamptz
  - birth_date, gestation_start_date, end_date -> date
  - use Asia/Bangkok as the database/session timezone
  '''
}

Table users {
  id int [pk, increment]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  customer_id varchar(255)
  payment_method_id varchar(255)
  device_token varchar(512) [not null]
  first_name varchar(255) [not null]
  last_name varchar(255) [not null]
  noti_food boolean [not null, default: true]
  noti_calendars boolean [not null, default: true]
  noti_update_pet boolean [not null, default: true]
  profile_free integer [not null, default: 0]
  food_free integer [not null, default: 0]
  food_plan_free integer [not null, default: 0]
  disease_free integer [not null, default: 0]
  subscription_status integer [not null, default: 2, note: '0=inactive, 1=incomplete, 2=active, 3=past_due, 4=canceled']
  tier integer [not null, default: 0, note: '0=free, 1=week, 2=month, 3=year']
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  deleted_at timestamptz
}

Table pets {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  image_path varchar(512)
  name varchar(255) [not null]
  type integer [not null, note: '0=dog, 1=cat']
  breed varchar(255) [not null]
  sex_type integer [not null, note: '0=female, 1=male']
  birth_date date [not null]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  deleted_at timestamptz
}

Table pet_details {
  id int [pk, increment]
  pet_id int [not null, ref: > pets.id]
  weight decimal(12,4) [not null, note: '> 0']
  activity_level integer [not null, note: '0=inactive, 1=some_active, 2=active, 3=very_active']
  age_range integer [not null, note: '0=junior, 1=adult, 2=senior']
  bcs integer [not null]
  lactation boolean [not null, default: false]
  gestation boolean [not null, default: false]
  gestation_start_date date
  neutered boolean [not null, default: false]
  energy decimal(12,4) [not null]
  protein decimal(12,4) [not null]
  fat decimal(12,4) [not null]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table foods {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  image_path varchar(512)
  name varchar(255) [not null]
  brand varchar(255) [not null]
  type integer [not null, note: '0=dry, 1=wet, 2=treats, 3=supplements']
  energy decimal(12,4) [not null]
  protein decimal(12,4) [not null]
  fat decimal(12,4) [not null]
  moist decimal(12,4) [not null]
  grams_per_cup decimal(12,4) [not null, default: 120.0000]
  deleted_at timestamptz
}

Table food_quantities {
  id int [pk, increment]
  food_id int [not null, ref: > foods.id]
  quantity integer [not null]
  weight decimal(12,4) [not null]
  amount decimal(12,4) [not null]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table pet_food_plans {
  id int [pk, increment]
  pet_id int [not null, ref: > pets.id]
  name varchar(255) [not null]
  active boolean [not null]
  unit integer [not null, default: 0, note: '0=gram, 1=cup']
  self_define boolean [not null, default: false]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  deleted_at timestamptz
}

Table food_pet_food_plans {
  id int [pk, increment]
  pet_food_plan_id int [not null, ref: > pet_food_plans.id]
  food_id int [not null, ref: > foods.id]
}

Table pet_food_plan_totals {
  id int [pk, increment]
  pet_food_plan_id int [not null, ref: > pet_food_plans.id]
  pet_detail_id int [not null, ref: > pet_details.id]
  total_energy_intake decimal(12,4) [not null]
  total_protein_intake decimal(12,4) [not null]
  total_fat_intake decimal(12,4) [not null]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table pet_food_plan_details {
  id int [pk, increment]
  food_pet_food_plan_id int [not null, ref: > food_pet_food_plans.id]
  pet_food_plan_totals_id int [not null, ref: > pet_food_plan_totals.id]
  amount decimal(12,4) [not null]
  energy_intake decimal(12,4) [not null]
  protein_intake decimal(12,4) [not null]
  fat_intake decimal(12,4) [not null]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table pet_food_plan_histories {
  id int [pk, increment]
  pet_id int [not null, ref: > pets.id]
  pet_food_plan_total_id int [not null, ref: > pet_food_plan_totals.id]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
}

Table pet_calendars {
  id int [pk, increment]
  name varchar(255) [not null]
  type integer [not null, note: '0=vaccine, 1=drug, 2=appointment']
  start_datetime timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  end_date date
  frequently integer [not null, note: '0=not, 1=day, 2=week, 3=month, 4=year']
  notation varchar(512)
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  deleted_at timestamptz
}

Table pet_activity_calendars {
  id int [pk, increment]
  pet_id int [not null, ref: > pets.id]
  pet_calendar_id int [not null, ref: > pet_calendars.id]
}

Table pet_skin_images {
  id int [pk, increment]
  pet_id int [not null, ref: > pets.id]
  image_path varchar(255) [not null]
  predicted integer [not null, note: '0=ringworm, 1=scabies, 2=healthy, 3=demodicosis, 4=pyoderma, 5=other, 6=bacterial_dermatosis']
  confident integer [not null]
  labeled integer [note: '-1=not, 0=ringworm, 1=scabies, 2=healthy, 3=demodicosis, 4=pyoderma, 5=other, 6=bacterial_dermatosis']
  image_evidence varchar(512)
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  deleted_at timestamptz
}
